# tree-sitter-shexc

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml
bindings/c/: tree-sitter-shexc.pc.in
bindings/c/tree_sitter/: tree-sitter-shexc.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_shexc/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterShexcTests/: TreeSitterShexcTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: node_constraints.txt  prefixes.txt  semantic_actions.txt  shape_expressions.txt  triple_expressions.txt
