[package]
name = "tree-sitter-shexc"
description = "parser for Shape Expressions Compact Syntax"
version = "0.1.0"
authors = ["ericP <eric+github@uu3.org>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "shexc"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/ericprud/tree-sitter-shexc"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.9"
